--- a/core/app/views/_css_header_v3.html
+++ b/core/app/views/_css_header_v3.html
@@ -1,6 +1,6 @@
 #{stylesheet 'bootstrap3/bootstrap.min.css'/}
-#{stylesheet 'bootstrap3/AdminLTE.min.css'/}
 #{stylesheet 'bootstrap3/font-awesome.css'/}
+#{stylesheet 'bootstrap3/AdminLTE.css'/}
 #{stylesheet 'bootstrap3/selectize.bootstrap3.css'/}
 #{stylesheet 'jquery.loadmask.css'/}
 #{stylesheet 'bootstrap3/datepicker3.css'/}
