--- a/core/app/views/Deliveryments/index.html
+++ b/core/app/views/Deliveryments/index.html
@@ -24,14 +24,14 @@
             <div class="form-group">
               <div class="input-group">
                 <div class="input-group-addon">From:</div>
-                <input style="width:90px;" class="form-control" id="date_from" name="p.from" value="${p.from.date()}">
+                <input style="width:100px;" class="form-control" id="date_from" name="p.from" value="${p.from.date()}">
               </div>
             </div>
 
             <div class="form-group">
               <div class="input-group">
                 <div class="input-group-addon">To:</div>
-                <input style="width:90px;" class="form-control" id="date_to" name="p.to" value="${p.to.date()}">
+                <input style="width:100px;" class="form-control" id="date_to" name="p.to" value="${p.to.date()}">
               </div>
             </div>
 
@@ -71,7 +71,7 @@
             <button class="btn btn-primary" data-loading>搜索</button>
 
           #{power.ck "deliveryments.manual"}
-            <a target="_blank" class="btn btn-primary" href='@{Deliveryments.manual()}'>
+            <a target="_blank" class="btn btn-warning" href='@{Deliveryments.manual()}'>
               <i class="icon-plus"></i>新增手动单
             </a>
           #{/power.ck}
