--- a/core/app/views/header_v3.html
+++ b/core/app/views/header_v3.html
@@ -313,8 +313,8 @@
         <li class="dropdown notifications-menu">
           <!-- Menu toggle button -->
           <a href="#" class="dropdown-toggle" data-toggle="dropdown">
-            <i class="fa fa-bell-o"></i>
-            <span class="label label-warning">10</span>
+            <i class="fa fa-exchange"></i>
+            <b class="caret"></b>
           </a>
           <ul class="dropdown-menu">
             <li class="header">请选择切换的项目</li>
