新增产品页面修改

--- a/core/app/views/main_full_v3.html
+++ b/core/app/views/main_full_v3.html
@@ -24,7 +24,7 @@
 
 </head>
 
-<body class="hold-transition skin-black sidebar-mini sidebar-collapse">
+<body class="hold-transition skin-black-light sidebar-mini sidebar-collapse">
 <div class="wrapper">
 
 #{render 'header_v3.html'/}
