--- a/core/app/views/Sellings/index.html
+++ b/core/app/views/Sellings/index.html
@@ -80,17 +80,17 @@
         <table class="table table-bordered table-condensed no-margin" id="data-table">
           <tr>
             <th><input type="checkbox" class="checkall"></th>
-            <th width="300px;">SellingID</th>
+            <th width="320px;">SellingID</th>
             <th>SKU</th>
             <th>市场</th>
             <th>实时价格</th>
             <th>ASIN</th>
             <th>生命周期</th>
-            <th>系统内上架</th>
+            <th>ERP上架</th>
             <th width="135px;">feed更新时间</th>
             <th>feed更新状态</th>
-            <th width="135px;">创建时间</th>
-            <th width="135px;">系统内下架时间</th>
+            <th width="145px;">创建时间</th>
+            <th width="145px;">ERP下架时间</th>
             <th width="180px;">操作</th>
           </tr>
         #{list items:sellings , as:'s'}
