--- a/core/app/views/Cooperators/_items.html
+++ b/core/app/views/Cooperators/_items.html
@@ -19,24 +19,25 @@
     <td>${itm.lowestOrderNum}</td>
     <td style="color:${itm.status.rgb()}">${itm.status?.label()}</td>
     <td>
-      <a href="@{Cooperators.editCooperItem(itm.id)}" class="btn btn-mini"><i class="icon-edit"></i></a>
-      <button copItemId='${itm.id}' class="btn btn-mini delelte" rel="tooltip" title="删除">
-        <i class="icon-trash"></i></button>
-        #{power.ck 'cooperitem.skuauditing'}
-            #{if itm.status?.name() != 'Agree'}
-              <a class="btn btn-mini" style="color:green;" rel="tooltip" title="审核通过"
-                 href="@{Cooperators.agreeCooperItem(itm.id)}"><i class="icon-ok"></i></a>
-              <a class="btn btn-mini" style="color:red;" rel="tooltip" title="审核不通过"
-                 href="@{Cooperators.disAgreeCooperItem(itm.id)}"><i class="icon-remove"></i></a>
-            #{/if}
-        #{/power.ck}
+      <a href="@{Cooperators.editCooperItem(itm.id)}" class="btn btn-sm"><i class="icon-pencil"></i></a>
+      <a href="@{Cooperators.removeCooperItemById(itm.id)}" class="btn btn-xs btn-danger" rel="tooltip"
+         name="itemDel" title="删除"><i class="icon-trash"></i></a>
+      
+      #{power.ck 'cooperitem.skuauditing'}
+          #{if itm.status?.name() != 'Agree'}
+            <a class="btn btn-sm" style="color:green;" rel="tooltip" title="审核通过"
+               href="@{Cooperators.agreeCooperItem(itm.id)}"><i class="icon-ok"></i></a>
+            <a class="btn btn-sm" style="color:red;" rel="tooltip" title="审核不通过"
+               href="@{Cooperators.disAgreeCooperItem(itm.id)}"><i class="icon-remove"></i></a>
+          #{/if}
+      #{/power.ck}
     </td>
   </tr>
 #{/list}
   <!-- 为此供应商关联新的产品 -->
   <tr>
     <td colspan="8">
-      <a href="@{Cooperators.newCooperItem(null, coper.id)}" class="btn btn-primary">
+      <a href="@{Cooperators.newCooperItem(null, coper.id)}" class="btn btn-sm btn-primary">
         为[${coper.fullName}]添加新的生产的产品</a>
     </td>
   </tr>
