--- a/core/app/views/Cooperators/index.html
+++ b/core/app/views/Cooperators/index.html
@@ -1,4 +1,4 @@
-#{extends 'main_full.html'/}
+#{extends 'main_full_v3.html'/}
 #{set title:"Cooperators(${p.totalCount})" /}
 #{set 'moreScripts'}
     #{script 'component/pagination.coffee'/}
@@ -12,87 +12,84 @@
   <p>${flash.success}</p>
 </div>
 #{/if}
+<div class="row">
+  <div class="col-md-12">
+    <div class="box box-primary">
+      <div class="box-header with-border">
+        <div class="row-fluid">
+          <form action="@{Cooperators.index()}" method="get" class="form-inline" id="search_Form">
+            <div class="row-fluid">
 
-<div class="row-fluid">
-  <form action="@{Cooperators.index()}" method="get" class="search_form" id="search_Form">
-    <div class="row-fluid">
-      <div class="span12">
 
-        <div class="input-prepend input-append inline">
-          <span class="add-on"><i class="icon-search"></i></span>
-          <input type="text" style="width:220px;" name="p.search" placeholder="全称 or SKU or 代码" value="${p.search}">
-          <input type="hidden" name="p.page" value="${p.page}">
-          <button class="btn btn-primary" data-loading>搜索</button>
+              <div class="input-group">
+                <span class="add-on"><i class="icon-search"></i></span>
+                <input type="text" class="form-control" style="width:220px;" name="p.search" placeholder="全称 or SKU or 代码" value="${p.search}">
+                <input type="hidden" name="p.page" value="${p.page}">
+              </div>
+              <button class="btn btn-primary" data-loading>搜索</button>
+              <a href="@{Cooperators.newCooper()}" class="btn btn-success">添加新合作伙伴</a>
+
+            </div>
+          </form>
         </div>
-        <a href="@{Cooperators.newCooper()}" class="btn btn-success">添加新合作伙伴</a>
+      </div>
+      <div class="box-body">
+        <table class="table table-condensed table-bordered dataTable" id="data-table">
+          <tr>
+            <th>供应商全称</th>
+            <th width="100px;">SKU</th>
+            <th width="120px;">物料</th>
+            <th>代码</th>
+            <th>供应商类型</th>
+            <th>订单数</th>
+            <th>固定电话</th>
+            <th>联系人</th>
+            <th>手机</th>
+            <th>创建人</th>
+            <th>创建时间</th>
+            <th>操作</th>
+          </tr>
+        #{list items:coopers, as:'c'}
+          <tr style="background:#{if c.showRed()} red #{/if}">
+            <td>${c.fullName}</td>
+            <td style="cursor:pointer;" name="clickTd" data-id="${c.id}" data-url="@{Cooperators.showCooperItem()}">
+              <span><i class="icon-reorder"></i></span>
+                #{if c.type==models.procure.Cooperator.T.SUPPLIER}
+                  <span class="badge badge-info">${c.showItemNum(true)}</span>
+                #{/if}
+            </td>
+            <td style="cursor:pointer;" name="clickTd" data-id="${c.id}" data-url="@{Cooperators.showMaterialItem()}">
+              <span><i class="icon-reorder"></i></span>
+                #{if c.type==models.procure.Cooperator.T.SUPPLIER}
+                  <span class="badge badge-info">${c.showItemNum(false)}</span>
+                #{/if}
+            </td>
+            <td>${c.name}</td>
+            <td>${c.type?.label()}</td>
+            <td>
+                #{if c.type==models.procure.Cooperator.T.SUPPLIER}
+                  <a href="@{Deliveryments.indexByCooperId(c.id)}" target="_blank">${c.deliveryments?.size()}</a>
+                #{/if}
+                #{else }
+                  <a href="@{controllers.Shipments.indexByCooperId(c.id)}" target="_blank" rel="tooltip" title="涉及物流单">
+                  ${c.shipments?.size()}</a>
+                #{/else}
+            </td>
+            <td>${c.tel}</td>
+            <td>${c.contacter}</td>
+            <td>${c.phone}</td>
+            <td>${c.creator?.username}</td>
+            <td>#{time_tooltip time:c.createDate/}</td>
+            <td><a href="@{Cooperators.show(c.id, true)}" target="_blank" class="btn btn-xs btn-primary">编辑条款</a>
+            </td>
+          </tr>
+        #{/list}
+        </table>
+      </div>
+
+      <div class="box-footer">
+      #{bootstrap_pager_v3 pi:p, url:'/products/index'/}
       </div>
     </div>
-  </form>
-
-  <div class="row-fluid">
-    <div class="span12">
-      <table class="table table-condensed table-bordered" id="data-table">
-        <tr>
-          <th>供应商全称</th>
-          <th width="100px;">SKU</th>
-          <th width="120px;">物料</th>
-          <th>代码</th>
-          <th>供应商类型</th>
-          <th>订单数</th>
-          <th>固定电话</th>
-          <th>联系人</th>
-          <th>手机</th>
-          <th>创建人</th>
-          <th>创建时间</th>
-          <th>操作</th>
-        </tr>
-      #{list items:coopers, as:'c'}
-        <tr style="background:#{if c.showRed()} red #{/if}">
-          <td>${c.fullName}</td>
-          <td style="cursor:pointer;" name="clickTd" data-id="${c.id}" data-url="@{Cooperators.showCooperItem()}">
-            <span><i class="icon-reorder"></i></span>
-              #{if c.type==models.procure.Cooperator.T.SUPPLIER}
-                <span class="badge badge-info">${c.showItemNum(true)}</span>
-              #{/if}
-          </td>
-          <td style="cursor:pointer;" name="clickTd" data-id="${c.id}" data-url="@{Cooperators.showMaterialItem()}">
-            <span><i class="icon-reorder"></i></span>
-              #{if c.type==models.procure.Cooperator.T.SUPPLIER}
-                <span class="badge badge-info">${c.showItemNum(false)}</span>
-              #{/if}
-          </td>
-          <td>${c.name}</td>
-          <td>${c.type?.label()}</td>
-          <td>
-              #{if c.type==models.procure.Cooperator.T.SUPPLIER}
-                <a href="@{Deliveryments.indexByCooperId(c.id)}" target="_blank">${c.deliveryments?.size()}</a>
-              #{/if}
-              #{else }
-                <a href="@{controllers.Shipments.indexByCooperId(c.id)}" target="_blank" rel="tooltip" title="涉及物流单">
-                ${c.shipments?.size()}</a>
-              #{/else}
-          </td>
-          <td>${c.tel}</td>
-          <td>${c.contacter}</td>
-          <td>${c.phone}</td>
-          <td>${c.creator?.username}</td>
-          <td>#{time_tooltip time:c.createDate/}</td>
-          <td><a href="@{Cooperators.show(c.id, true)}" target="_blank" class="btn btn-mini btn-primary">编辑条款</a></td>
-        </tr>
-      #{/list}
-        <tr>
-          <td colspan="12">
-          #{if coopers.size() == 0}
-            暂时还没有入库记录
-          #{/if}
-          #{else }
-              #{bootstrap_pager pi:p, url:'' /}
-          #{/else}
-          </td>
-        </tr>
-
-      </table>
-    </div>
   </div>
-
 </div>
