--- a/core/app/views/ProcureUnits/indexWhouse.html
+++ b/core/app/views/ProcureUnits/indexWhouse.html
@@ -1,10 +1,12 @@
 #{extends 'main_full_v3.html' /}
 #{set title:"采购单元列表 (${p.count()})"  /}
 #{set 'moreStyles'}
+    #{stylesheet 'bootstrap3/dataTables.bootstrap.css'/}
     #{stylesheet 'bootstrap-multiselect.css'/}
 #{/set}
 #{set 'moreScripts'}
-    #{script 'jquery.dataTables.js'/}
+    #{script 'bootstrap3/jquery.dataTables.js'/}
+    #{script 'bootstrap3/dataTables.bootstrap.js'/}
     #{script 'bootstrap-multiselect.js'/}
     #{script 'component/pagination.coffee'/}
     #{script 'procureunits/index.coffee'/}
@@ -18,7 +20,6 @@
 </style>
 #{errorMsgs /}
 #{flash_alert /}
-
 
 <div class="row">
   <div class="col-md-12">
@@ -70,7 +71,6 @@
             #{/list}
             </select>
 
-
             <select name="p.stages" multiple="multiple" class="form-control" id="stage">
             #{list items:models.procure.ProcureUnit.STAGE.values(), as:'stage'}
                 #{if stage.name() != 'APPROVE'}
@@ -85,7 +85,7 @@
             #{/list}
             </select>
 
-            <select name="p.cooperatorId" class="form-control" style="width:150px;">
+            <select name="p.cooperatorId" class="form-control selectize" style="width:100px;">
               <option value="">供应商</option>
             #{list items:cooperators, as:'cop'}
               <option ${cop.id == p.cooperatorId ? 'selected' : ''} value="${cop.id}">${cop.name}</option>
@@ -110,7 +110,7 @@
 
             <div class="input-group">
               <div class="input-group-addon"><i class="icon-search"></i></div>
-              <input type="text" name="p.search" style="width:200px;" class="form-control"
+              <input type="text" name="p.search" style="width:180px;" class="form-control"
                      placeholder="出货单ID or sellingId or SKU" value="${p.search}">
               <input type="hidden" name="p.page" value="${p.page}">
             </div>
@@ -144,30 +144,29 @@
 
       <form method="post" id="create_deliveryment">
         <div class="box-body">
-          <table class="table table-condensed table-bordered dataTable" id="unit_table">
+          <table class="table table-condensed table-bordered" id="unit_table">
             <thead>
             <tr>
-              <th width="20px;">
+              <th style="width:20px;">
                 <input type="checkbox" id="checkbox_all" class="checkall">
               </th>
-              <th width="60px;">采购计划ID</th>
-              <th>父ID</th>
+              <th style="width:50px;">采购计划ID</th>
+              <th style="width:30px;">父ID</th>
               <th>阶段</th>
-              <th width="155px;">Sku<br>产品名称</th>
+              <th style="width:155px;">Sku<br>产品名称</th>
               <th width="120px;">FBA-ShipmentId<br>CenterId</th>
               <th width="65px;">去往市场</th>
-              <th>深圳仓库</th>
-              <th>供应商</th>
+              <th style="width:40px;">深圳仓库</th>
+              <th width="40px;">供应商</th>
               <th width="80px;">采购单</th>
-              <th>出货单</th>
-              <th width="100px;">数量<br>(计划/交货/入库)</th>
+              <th width="105px;">数量<br>(计划/交货/入库)</th>
               <th rel="popover" content="<img src='/img/helper/fnsku.png' />" width="100px;">FnSku</th>
-              <th>运输方式</th>
-              <th width="150px;">时间<br>(预计交货/预计运输)</th>
+              <th width="30px;">运输方式</th>
+              <th style="width:170px;">时间<br>(预计交货/预计运输)</th>
               <th width="80px;">实际交货时间</th>
-              <th width="40px;">质检状态</th>
-              <th width="40px;">质检结果</th>
-              <th>包装信息</th>
+              <th width="30px;">质检状态</th>
+              <th width="30px;">质检结果</th>
+              <th width="30px;">包装信息</th>
               <th width="60px;">项目名称</th>
               <th width="75px;">创建人<br>创建时间</th>
             </tr>
@@ -225,7 +224,6 @@
               <td>${unit.currWhouse?.name}</td>
               <td>${unit.cooperator?.name}</td>
               <td>${unit.deliveryment?.id}</td>
-              <td>${unit.deliverplan?.id}</td>
               <td #{if unit.attrs.planQty != unit.attrs.qty && (unit.attrs.qty !=0 && unit.attrs.qty)} style="color:red"#{/if}>
               ${unit.attrs.planQty} / ${unit.attrs.qty} / ${unit.inboundQty}
               </td>
