--- a/core/app/views/main_full_v3.html
+++ b/core/app/views/main_full_v3.html
@@ -7,6 +7,9 @@
   <link rel="shortcut icon" type="image/png" href="@{'/public/images/favicon.png'}">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link href="/public/stylesheets/bootstrap-responsive.css" rel="stylesheet">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.5.0/css/font-awesome.min.css">
+  <!-- Ionicons -->
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/ionicons/2.0.1/css/ionicons.min.css">
   <script type="text/javascript">
       #{if play.Play.mode.isDev()}
       window.PLAY_MODE = "DEV";
