--- a/core/app/views/_js_header_v3.html
+++ b/core/app/views/_js_header_v3.html
@@ -13,5 +13,6 @@
 #{script 'jquery.loadmask.min.js'/}
 #{script 'main.js'/}
 #{script 'jquery.form.js'/}
+#{script 'underscore-min.js'/}
 
 #{script 'bootstrap3/init.es6'/}
