--- a/core/app/views/Products/_destroyLogForm.html
+++ b/core/app/views/Products/_destroyLogForm.html
@@ -11,7 +11,7 @@
             <label class="col-sm-2 control-label">原因</label>
             <div class="col-sm-10">
               <textarea role="5" name="reason" class="form-control"></textarea>
-              <input name="id" type="hidden">
+              <input name="id" type="hidden" id="delete_sku_input">
             </div>
           </div>
         </div>
