--- a/core/app/views/Products/_material.html
+++ b/core/app/views/Products/_material.html
@@ -1,79 +1,64 @@
-<div class="row-fluid">
-  <div class="span6">
-    <form action="" method="get" class="search_form" id="search_Form">
-      <div class="row-fluid">
-        <div class="span12">
-
-          <select name="m.type" class="inline">
+<div class="row">
+  <div class="col-md-6">
+    <div class="box box-warning">
+      <div class="box-header">
+        <form action="" method="get" class="form-inline" id="search_Form">
+          <select name="m.type" class="form-control">
             <option value="">物料类型</option>
           #{list items:models.material.Material.T, as:'t'}
             <option value="${t.name()}">${t.label()}</option>
           #{/list}
           </select>
 
-          <div class="input-prepend input-append inline">
-            <span class="add-on"><i class="icon-search"></i></span>
-            <input type="text" style="width:220px;" name="m.search" placeholder="物料编码 or Name or 采购计划ID" value="">
-            <input type="hidden" name="p.page" value="">
-            <button class="btn btn-primary" id="search_btn" data-url="@{Materials.showMaterialList()}">搜索</button>
+          <div class="input-group">
+            <div class="input-group-addon"><i class="icon-search"></i></div>
+            <input style="width:200px;" class="form-control" name="m.search" placeholder="物料编码 or Name or 采购计划ID">
           </div>
-
-        </div>
+          <button class="btn btn-primary" id="search_btn" data-url="@{Materials.showMaterialList()}">搜索</button>
+        </form>
       </div>
-
-      <div class="row-fluid">
-        <div class="span12">
-          <div class="input-prepend input-append inline">
-            <button class="btn btn-warning" id="bind_btn" data-url="@{Materials.bindMaterialForSku()}"
-                    data-sku="${pro.sku}">绑定
-            </button>
-          </div>
-        </div>
+      <div class="box-body">
+        <div id="data_div"></div>
       </div>
-
-    </form>
-
-    <div id="data_div">
-
+      <div class="box-footer">
+        <button class="btn btn-warning" id="bind_btn" data-url="@{Materials.bindMaterialForSku()}" data-sku="${pro.sku}">
+          绑定
+        </button>
+      </div>
     </div>
-
   </div>
 
-  <div class="span6">
-    <div class="row-fluid">
-      <div class="span12">
-        <div class="input-prepend input-append inline">
-          <button class="btn btn-warning" id="unBind_btn" data-url="@{Materials.unBindMaterialForSku()}"
-                  data-sku="${pro.sku}">解绑
-          </button>
+  <div class="col-md-6">
+    <div class="box box-success">
+      <div class="box-header">
+        <button class="btn btn-warning" id="unBind_btn" data-url="@{Materials.unBindMaterialForSku()}"
+                data-sku="${pro.sku}">解绑
+        </button>
+      </div>
+      <div class="box-body">
+        <div id="bind_div">
+          <table class="table table-condensed table-bordered">
+            <tr>
+              <th></th>
+              <th>物料编码</th>
+              <th>物料名称</th>
+              <th>规格</th>
+              <th width="150px;">工艺</th>
+              <th width="150px;">工厂物料代码</th>
+            </tr>
+          #{list items:pro.materials, as:'m'}
+            <tr>
+              <td><input type="checkbox" name="mids" value="${m.id}"></td>
+              <td><a href="@{Materials.edit(m.id)}" target="_blank">${m.code}</a></td>
+              <td data-toggle="tooltip" title="${m.name}">${m.name.nineLong()}</td>
+              <td data-toggle="tooltip" title="${m.specification}">${m.specification.nineLong()}</td>
+              <td data-toggle="tooltip" title="${m.technology}">${m.technology.nineLong()}</td>
+              <td data-toggle="tooltip" title="${m.version}">${m.version.nineLong()}</td>
+            </tr>
+          #{/list}
+          </table>
         </div>
       </div>
     </div>
-    <div id="bind_div">
-      <table class="table table-condensed table-bordered">
-        <tr>
-          <th></th>
-          <th>物料编码</th>
-          <th>物料名称</th>
-          <th>物料类别</th>
-          <th>规格</th>
-          <th width="150px;">工艺</th>
-          <th width="150px;">工厂物料代码</th>
-        </tr>
-      #{list items:pro.materials, as:'m'}
-        <tr>
-          <td><input type="checkbox" name="mids" value="${m.id}"></td>
-          <td>${m.code}</td>
-          <td>${m.name}</td>
-          <td>${m.type.label()}</td>
-          <td>${m.specification}</td>
-          <td>${m.technology}</td>
-          <td>${m.version}</td>
-        </tr>
-      #{/list}
-      </table>
-    </div>
-
   </div>
-
 </div>
