--- a/core/app/views/Products/blank.html
+++ b/core/app/views/Products/blank.html
@@ -23,12 +23,12 @@
       <form action="@{Products.create()}" method="post" id="create_product_form" role="form" class="form-horizontal">
         <div class="box-body">
           <div class="form-group">
-            <label for="inputEmail3" class="col-sm-1 control-label">Category</label>
+            <label for="pro_category" class="col-sm-1 control-label">Category</label>
             <div class="col-sm-2">
-              <input type="email" class="form-control" id="pro_category" name="pro.category.categoryId" required
+              <input class="form-control" id="pro_category" name="pro.category.categoryId" required
                      value="${pro.category?.categoryId}" data-provide="typeahead" data-source="${categorys}">
             </div>
-            <label for="inputEmail3" class="col-sm-2 control-label">Family</label>
+            <label for="pro_family" class="col-sm-2 control-label">Family</label>
             <div class="col-sm-2">
               <input id="pro_family" name="pro.family.family" data-provide="typeahead" required class="form-control"
                      data-source="${families}" value="${pro.family?.family}">
@@ -40,20 +40,7 @@
           </div>
 
           <div class="form-group">
-            <label for="inputEmail3" class="col-sm-1 control-label">长(包材)</label>
-            <div class="col-sm-2">
-              <div class="input-group">
-                <input type="text" class="form-control" name="pro.lengths" value="${pro.lengths}">
-                <span class="input-group-addon">mm</span>
-              </div>
-            </div>
-            <label for="inputEmail3" class="col-sm-2 control-label">宽(包材)</label>
-            <div class="col-sm-2">
-              <div class="input-group">
-                <input type="text" class="form-control" name="pro.width" value="${pro.width}">
-                <span class="input-group-addon">mm</span>
-              </div>
-            </div>
+
           </div>
 
           <div class="form-group">
