--- a/core/app/views/ProcureUnits/_unit_list_v3.html
+++ b/core/app/views/ProcureUnits/_unit_list_v3.html
@@ -14,8 +14,8 @@
     <th width="40px;">#</th>
     <th>父ID</th>
     <th width="40px;">阶段</th>
-    <th width="150px;">Selling</th>
-    <th>Sku</th>
+    <th width="170px;">Selling</th>
+    <th width="120px">Sku</th>
     <th width="130px;">FBA-ShipmentId<br>CenterId</th>
     <th>采购单<br>供应商</th>
     <th>去往市场</th>
